# spray

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
spray/core/: buffer_array.hpp  camera.hpp  camera_base.hpp  color.cuh  color.hpp  cuda_assert.hpp  cuda_macro.hpp  material.hpp  orthogonal_camera.cu  orthogonal_camera.cuh  path_tracing.cuh  pinhole_camera.cu  pinhole_camera.cuh  render.cu  render.cuh  render.hpp  save_image.cpp  save_image.hpp  show_image.cu  show_image.cuh  show_image.hpp  world.cu  world.cuh  world.hpp  world_base.hpp
spray/cuda/: buffer_array.hpp  cuda_assert.cuh  cuda_assert.hpp  cuda_macro.hpp  render.cu  render.hpp  show_image.cu
spray/geom/: aabb.cuh  aabb.hpp  collide.cuh  collide.hpp  color.cuh  color.hpp  lambertian.cuh  point.cuh  point.hpp  ray.cuh  ray.hpp  sphere.cuh  sphere.hpp
spray/glad/: load.hpp
spray/glfw/: init.hpp  window.hpp
spray/sdl/: locked_texture_view.hpp  rectangle.hpp  resource.hpp  texture.hpp  window.hpp
spray/util/: cuda_assert.hpp  cuda_macro.hpp  cuda_math.hpp  cuda_util.cuh  cuda_util.hpp  log.hpp  observer_ptr.hpp  scope_exit.hpp  smart_ptr_dispatcher.hpp  unique_resource.hpp
spray/xyz/: xyz.hpp
src/: CMakeLists.txt  main.cpp  main.cu
test/: CMakeLists.txt  test_scope_exit.cpp  test_smart_ptr_dispatcher.cpp  test_unique_resource.cpp
